@@ -1665,7 +1665,8 @@ public abstract class AutomatedTestBase {
 			"--add-opens=java.base/java.lang=ALL-UNNAMED" ,
 			"--add-opens=java.base/java.lang.ref=ALL-UNNAMED" ,
 			"--add-opens=java.base/java.util.concurrent=ALL-UNNAMED" ,
-			"--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",};
+			"--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+			"--add-modules=jdk.incubator.vector",};
 
 		RuntimeMXBean runtimeMxBean = ManagementFactory.getRuntimeMXBean();
 		List<String> jvmArgs = runtimeMxBean.getInputArguments();
